Refactor project structure

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+postgre.db
 
 # Flask stuff:
 instance/
@@ -164,3 +165,4 @@ cython_debug/
 .DS_Store
 media/
 static/
+.direnv/
